--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "main-dz",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Bohdan-morenec.github.io/goit-react-hw-07-phonebook",
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.0",
     "@testing-library/jest-dom": "^5.14.1",
